--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,23 @@ jobs:
     docker: 
       - image: circleci/cci-demo-docker-primary:0.0.2 # the primary container, where your job's commands are run
     steps:
-      - checkout # check out the code in the project directory
       - run:
-          name: Install Docker Compose
-          command: |
-            set -x
-            curl -L https://github.com/docker/compose/releases/download/1.25.3/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
-            chmod +x /usr/local/bin/docker-compose
-      - setup_remote_docker
-      - run: echo chmod +x script.sh && ./script.sh # run the `echo` command
+          name: Test variables
+          command: | 
+            echo $test
+      # - checkout # check out the code in the project directory
+      # - run:
+      #     name: Install Docker Compose
+      #     command: |
+      #       set -x
+      #       curl -L https://github.com/docker/compose/releases/download/1.25.3/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
+      #       chmod +x /usr/local/bin/docker-compose
+      # - setup_remote_docker
+      # - run: echo chmod +x script.sh && ./script.sh # run the `echo` command
+      # - run:
+      #     name: Build and push Docker image
+      #     command: |
+      #       TAG="0.1.${CIRCLE_BUILD_NUM}"
+      #       docker build -t circleci/cci-demo-docker:$TAG .
+      #       docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
+      #       docker push circleci/cci-demo-docker:$TAG
