test for versioning

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,12 @@
-version: 2.1
-jobs:
-  build:
-    docker: 
-      - image: circleci/cci-demo-docker-primary:0.0.2 # the primary container, where your job's commands are run
-    steps:
-      - run:
-          name: Test variables
-          command: | 
+# version: 2.1
+# jobs:
+#   build:
+#     docker: 
+#       - image: circleci/cci-demo-docker-primary:0.0.2 # the primary container, where your job's commands are run
+#     steps:
+#       - run:
+#           name: Test variables
+#           command: | 
             echo $test
       # - checkout # check out the code in the project directory
       # - run:
@@ -24,3 +24,57 @@ jobs:
       #       docker build -t circleci/cci-demo-docker:$TAG .
       #       docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
       #       docker push circleci/cci-demo-docker:$TAG
+
+
+
+# This code is licensed from CircleCI to the user under the MIT license. See
+# https://circleci.com/orbs/registry/licensing for details.
+version: 2.1
+description: "Orb to generate a version number from the git history"
+
+examples:
+  basic_commands:
+    description: |
+      Generate a version number from the git ref
+    usage:
+      version: 2.1
+      orbs:
+        docsync: streamroot/versioning@1.0.0
+      jobs:
+        build:
+          docker:
+            - image: alpine/git
+          steps:
+            - checkout
+            - versioning/generate
+
+commands:
+  generate:
+    parameters:
+      rc_branch:
+        description: |
+          Regex to determine release candidate branches
+        type: string
+        default: ^master$
+
+    steps:
+      - run:
+          name: "Add `VERSION` environment variable to `BASH_ENV`"
+          command: |
+            VERSION=$CIRCLE_TAG
+            if [ -z "$VERSION" ]; then
+              SHA="$(git rev-parse --short HEAD)"
+
+              VERSION="$(git describe --tags `git rev-list --tags --max-count=1` || true)"
+              VERSION=${VERSION:-'0.0.0'}
+              MAJOR="${VERSION%%.*}"; VERSION="${VERSION#*.}"
+              MINOR="${VERSION%%.*}"; VERSION="${VERSION#*.}"
+              PATCH="${VERSION%%.*}"; VERSION="${VERSION#*.}"
+
+              if [[ "$CIRCLE_BRANCH" =~ <<parameters.rc_branch>> ]]; then
+                VERSION="$MAJOR.$((MINOR+1)).0-rc-$SHA"
+              else
+                VERSION="$MAJOR.$((MINOR+1)).0-beta-$SHA"
+              fi
+            fi
+            echo "export VERSION=$VERSION" >> $BASH_ENV
