look this new app?

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,54 +27,20 @@
 
 
 
-# This code is licensed from CircleCI to the user under the MIT license. See
-# https://circleci.com/orbs/registry/licensing for details.
 version: 2.1
-description: "Orb to generate a version number from the git history"
-
-examples:
-  basic_commands:
-    description: |
-      Generate a version number from the git ref
-    usage:
-      version: 2.1
-      orbs:
-        docsync: streamroot/versioning@1.0.0
-      jobs:
-        build:
-          docker:
-            - image: alpine/git
-          steps:
-            - checkout
-            - versioning/generate
-
-commands:
-  generate:
-    parameters:
-      rc_branch:
-        description: |
-          Regex to determine release candidate branches
-        type: string
-        default: ^master$
-
+orbs:
+  github-release: h-matsuo/github-release@0.1.1
+jobs:
+  build:
+    description: Create dummy file and publish a new release tagged `vX.Y.Z`.
+    executor: github-release/default
     steps:
       - run:
-          name: "Add `VERSION` environment variable to `BASH_ENV`"
           command: |
-            VERSION=$CIRCLE_TAG
-            if [ -z "$VERSION" ]; then
-              SHA="$(git rev-parse --short HEAD)"
-
-              VERSION="$(git describe --tags `git rev-list --tags --max-count=1` || true)"
-              VERSION=${VERSION:-'0.0.0'}
-              MAJOR="${VERSION%%.*}"; VERSION="${VERSION#*.}"
-              MINOR="${VERSION%%.*}"; VERSION="${VERSION#*.}"
-              PATCH="${VERSION%%.*}"; VERSION="${VERSION#*.}"
-
-              if [[ "$CIRCLE_BRANCH" =~ <<parameters.rc_branch>> ]]; then
-                VERSION="$MAJOR.$((MINOR+1)).0-rc-$SHA"
-              else
-                VERSION="$MAJOR.$((MINOR+1)).0-beta-$SHA"
-              fi
-            fi
-            echo "export VERSION=$VERSION" >> $BASH_ENV
+            mkdir artifacts
+            echo dummy > ./artifacts/file
+      - github-release/create:
+          tag: vX.Y.Z
+          title: Version vX.Y.Z
+          description: This release is version vX.Y.Z .
+          file-path: ./artifacts/file
