--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-# version: 2.1
+version: 2.1
 # jobs:
 #   build:
 #     docker: 
@@ -25,17 +25,15 @@
       #       docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
       #       docker push circleci/cci-demo-docker:$TAG
 
-
-
-version: 2.1
-publish-github-release:
-  docker:
-    - image: cibuilds/github:0.10
-  steps:
-    - attach_workspace:
-        at: ./artifacts
-    - run:
-        name: "Publish Release on GitHub"
-        command: |
-          VERSION=$(my-binary --version)
-          ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} ./artifacts/
+jobs:
+  build:
+    docker:
+      - image: cibuilds/github:0.10
+    steps:
+      - attach_workspace:
+          at: ./artifacts
+      - run:
+          name: "Publish Release on GitHub"
+          command: |
+            VERSION=$(my-binary --version)
+            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} ./artifacts/
