--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,5 +35,6 @@ jobs:
       - run:
           name: "Publish Release on GitHub"
           command: |
-            VERSION=$(git rev-list --count circleci-project-setup)
+            go get github.com/MonseGuzman/pipeline-test
+            VERSION=1
             ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} ./artifacts/
