--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cibuilds/github:0.10
+      - image: cibuilds/golang:1.8
     steps:
       - attach_workspace:
           at: ./artifacts
