--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,15 +26,20 @@ version: 2.1
       #       docker push circleci/cci-demo-docker:$TAG
 
 jobs:
-  build:
-    docker:
-      - image: cibuilds/golang:1.8
-    steps:
-      - attach_workspace:
-          at: ./artifacts
-      - run:
-          name: "Publish Release on GitHub"
-          command: |
-            go get github.com/MonseGuzman/pipeline-test
-            VERSION=1
-            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} ./artifacts/
+  machine:
+    node:
+      version: 6.2.0
+    environment:
+        PROJECT_NAME: pipelinne-test
+  dependencies:
+    pre:
+      - go get github.com/aktau/github-release
+      - npm install github-release-notes -g
+  deployment:
+    release:
+      tag: /v[0-9]+(\.[0-9]+)*/
+      commands:
+        - zip -r $CIRCLE_ARTIFACTS/$PROJECT_NAME-$CIRCLE_TAG.zip dist/*
+        - git config user.name $CIRCLE_PROJECT_USERNAME
+        - gren --override --data-source=commits
+        - github-release upload --user $CIRCLE_PROJECT_USERNAME --repo $CIRCLE_PROJECT_REPONAME --tag $CIRCLE_TAG --name $CIRCLE_PROJECT_REPONAME"."$CIRCLE_TAG"-build-"$CIRCLE_BUILD_NUM".zip" --file $CIRCLE_ARTIFACTS/$PROJECT_NAME-$CIRCLE_TAG.zip
