--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,30 +9,7 @@ jobs:
       - run:
           name: Install Docker client
           command: |
-            set -x
-            VER="17.03.0-ce"
-            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
-            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-            mv /tmp/docker/* /usr/bin
-            docker --version
-      - run:
-          name: dockerfile test
-          command: | 
-            ls 
-            docker build .
-
-      # - run:
-      #     name: Install Docker Compose
-      #     command: |
-      #       set -x
-      #       curl -L https://github.com/docker/compose/releases/download/1.25.3/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
-      #       chmod +x /usr/local/bin/docker-compose
-      # - setup_remote_docker
-      # - run: echo chmod +x script.sh && ./script.sh # run the `echo` command
-      # - run:
-      #     name: Build and push Docker image
-      #     command: |
-      #       TAG="0.1.${CIRCLE_BUILD_NUM}"
-      #       docker build -t circleci/cci-demo-docker:$TAG .
-      #       docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
-      #       docker push circleci/cci-demo-docker:$TAG
+            chmod +x version-git.sh 
+            VERSION=`./version-git.sh`
+            # Tagging
+            git tag -a v$VERSION -m "version $VERSION"
