--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,9 +17,9 @@ jobs:
             OWNER=MonseGuzman
             REPOSITORY=pipeline-test
           
-            curl --data '{"tag_name": "v$VERSION",
+            curl --data '{"tag_name": "$VERSION",
                             "target_commitish": "master",
-                            "name": "v$VERSION",
+                            "name": "$VERSION",
                             "body": "Release of version $VERSION",
                             "draft": false,
                             "prerelease": false}' \
