--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,12 +7,12 @@ jobs:
       - checkout # check out the code in the project directory
       - setup_remote_docker    
       - run:
-          name: Install Docker client
+          name: Create a new release
           command: |
             chmod +x version-git.sh 
             VERSION=`./version-git.sh`
             # Tagging
-            git tag -a v$VERSION -m "version $VERSION"
+            git tag -a $VERSION -m "version $VERSION"
             
             OWNER=MonseGuzman
             REPOSITORY=pipeline-test
