--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,12 +10,12 @@ jobs:
           name: Create a new release
           command: |
             chmod +x version-git.sh 
-            VERSION=`./version-git.sh`
+            export VERSION=`./version-git.sh`
             # Tagging
             git tag -a $VERSION -m "version $VERSION"
             
-            OWNER=MonseGuzman
-            REPOSITORY=pipeline-test
+            export OWNER=MonseGuzman
+            export REPOSITORY=pipeline-test
           
             curl --data '{"tag_name": "$VERSION",
                             "target_commitish": "master",
