--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,4 +39,4 @@ jobs:
           name: Create release
           command: |
             chmod +x release.sh
-            ./release
+            ./release.sh
