--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ workflows:
     jobs:
       - "build"
       - "release":
+          type: approval
           requires:
             - "build"
 orbs:
@@ -25,7 +26,7 @@ jobs:
             # git tag -a $VERSION -m "version $VERSION"
             # git push "https://${GITHUB_USER}:${GITHUB_TOKEN}@github.com/MonseGuzman/pipeline-test.git" --tags
   "release":
-    description: Create dummy file and publish a new release.
+    description: Create a publish a new release.
     executor: github-release/default
     steps:
       - checkout
@@ -41,5 +42,5 @@ jobs:
       - github-release/create:
           tag: $CI_VERSION
           title: This is the release $CI_VERSION
-          description: hey, esto es un release o tag?
+          description: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
           file-path: ./artifacts/release
