--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,28 +2,55 @@ version: 2.1
 workflows:
   project:
     jobs:
-      - "build"
+        - "build":
+            context: CaaS
+            # filters:
+            #     branches:
+            #         only: master
+        - "release":
+            requires:
+                - "build"
+            # filters:
+            #     branches:
+            #         only: master
 orbs:
   github-release: h-matsuo/github-release@0.1.3
 jobs:
   "build":
-    description: Create a publish a new release.
-    executor: github-release/default
-    steps:
-      - checkout
-      - run:
-          name: Export environment variables
-          command: |
-            export VER=$(git tag | sort -V | tail -1)
-            export DESCRI=`cat description.txt`
-            
-            echo $CIRCLE_PROJECT_REPONAME
-            echo $CIRCLE_PROJECT_USERNAME
-
-            echo "export VERSION=${VER}" >> $BASH_ENV
-            echo "export DESCR='${DESCRI}'" >> $BASH_ENV
-      - github-release/create:
-          tag: $VERSION
-          title: version $VERSION
-          description: $DESCR
-          # file-path: ./artifacts/file
+      docker:
+          - image: dockerdoufer/aws-docker:circleci0.1
+      steps:
+          - checkout
+          - run:
+              name: Test
+              command: | 
+                  chmod +x tfe-private-module.sh
+                  ./tfe-private-module.sh
+          - run:
+              name: Run Bump Tag
+              command: |
+                  chmod +x version-tag.sh
+                  export VERSION=`./version-git.sh`
+                  git tag -a $VERSION -m "version: $VERSION"
+          - run:
+              name: Push tag
+              command: |
+                  echo $CIRCLE_PROJECT_REPONAME
+                  echo $CIRCLE_PROJECT_USERNAME
+                  git push "https://${GITHUB_USER}:${GITHUB_TOKEN}@github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME.git" --tags
+  "release":
+      description: Create a publish a new release.
+      executor: github-release/default
+      steps:
+          - checkout
+          - run:
+              name: Export environment variables
+              command: |
+                  export VER=$(git tag | sort -V | tail -1)
+                  export DESCRI=`cat release_description.txt`
+                  echo "export VERSION=${VER}" >> $BASH_ENV
+                  echo "export DESCR='${DESCRI}'" >> $BASH_ENV
+          - github-release/create:
+              tag: $VERSION
+              title: version $VERSION
+              description: $DESCR
