--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,50 +7,52 @@ workflows:
             # filters:
             #     branches:
             #         only: master
-        - "release":
-            requires:
-                - "build"
+        # - "release":
+        #     requires:
+        #         - "build"
             # filters:
             #     branches:
             #         only: master
 orbs:
   github-release: h-matsuo/github-release@0.1.3
+  jq: circleci/jq@2.2.0
 jobs:
   "build":
       docker:
           - image: dockerdoufer/aws-docker:circleci0.1
       steps:
           - checkout
+          - jq/install
           - run:
               name: Test
               command: | 
                   chmod +x tfe-private-module.sh
                   ./tfe-private-module.sh
-          - run:
-              name: Run Bump Tag
-              command: |
-                  chmod +x version-git.sh
-                  export VERSION=`./version-git.sh`
-                  git tag -a $VERSION -m "version: $VERSION"
-          - run:
-              name: Push tag
-              command: |
-                  echo $CIRCLE_PROJECT_REPONAME
-                  echo $CIRCLE_PROJECT_USERNAME
-                  git push "https://${GITHUB_USER}:${GITHUB_TOKEN}@github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME.git" --tags
-  "release":
-      description: Create a publish a new release.
-      executor: github-release/default
-      steps:
-          - checkout
-          - run:
-              name: Export environment variables
-              command: |
-                  export VER=$(git tag | sort -V | tail -1)
-                  export DESCRI=`cat description.txt`
-                  echo "export VERSION=${VER}" >> $BASH_ENV
-                  echo "export DESCR='${DESCRI}'" >> $BASH_ENV
-          - github-release/create:
-              tag: $VERSION
-              title: version $VERSION
-              description: $DESCR
+  #         - run:
+  #             name: Run Bump Tag
+  #             command: |
+  #                 chmod +x version-git.sh
+  #                 export VERSION=`./version-git.sh`
+  #                 git tag -a $VERSION -m "version: $VERSION"
+  #         - run:
+  #             name: Push tag
+  #             command: |
+  #                 echo $CIRCLE_PROJECT_REPONAME
+  #                 echo $CIRCLE_PROJECT_USERNAME
+  #                 git push "https://${GITHUB_USER}:${GITHUB_TOKEN}@github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME.git" --tags
+  # "release":
+  #     description: Create a publish a new release.
+  #     executor: github-release/default
+  #     steps:
+  #         - checkout
+  #         - run:
+  #             name: Export environment variables
+  #             command: |
+  #                 export VER=$(git tag | sort -V | tail -1)
+  #                 export DESCRI=`cat description.txt`
+  #                 echo "export VERSION=${VER}" >> $BASH_ENV
+  #                 echo "export DESCR='${DESCRI}'" >> $BASH_ENV
+  #         - github-release/create:
+  #             tag: $VERSION
+  #             title: version $VERSION
+  #             description: $DESCR
